--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,12 @@ six==1.14.0
 SQLAlchemy==1.3.17
 Werkzeug==1.0.1
 WTForms==2.3.1
+Flask-SocketIO==3.3.2
+gevent==1.4.0
+gevent-websocket==0.10.1
+greenlet==0.4.15
+gunicorn==19.9.0
+passlib==1.7.1
+psycopg2==2.7.7
+python-engineio==3.5.1
+python-socketio==3.1.2
