--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,79 @@
+astroid==2.4.1
 bcrypt==3.1.7
 blinker==1.4
 cffi==1.14.0
 click==7.1.2
 dnspython==1.16.0
-email-validator==1.1.0
+email-validator==1.1.1
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.4.1
+Flask-SocketIO==4.3.0
+Flask-SQLAlchemy==2.4.2
 Flask-WTF==0.14.3
+idna==2.9
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+Pillow==7.1.2
+pycparser==2.20
+pylint==2.5.2
+python-engineio==3.13.0
+python-socketio==4.6.0
+six==1.15.0
+SQLAlchemy==1.3.17
+toml==0.10.1
+Werkzeug==1.0.1
+wrapt==1.12.1
+WTForms==2.3.1
+absl-py==0.9.0
+astunparse==1.6.3
+cachetools==4.1.0
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+flask-util-js==0.2.25
+gast==0.3.3
+google-auth==1.16.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.29.0
+h5py==2.10.0
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
+joblib==0.15.1
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+Markdown==3.2.2
 MarkupSafe==1.1.1
-Pillow==7.1.2
-pkg-resources==0.0.0
-pycparser==2.20
-six==1.14.0
-SQLAlchemy==1.3.17
+nltk==3.5
+numpy==1.18.4
+oauthlib==3.1.0
+opt-einsum==3.2.1
+pickle-mixin==1.0.2
+protobuf==3.12.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyYAML==5.3.1
+regex==2020.5.14
+requests==2.23.0
+requests-oauthlib==1.3.0
+rsa==4.0
+scipy==1.4.1
+six==1.15.0
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.2.0
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
+tqdm==4.46.0
+urllib3==1.25.9
 Werkzeug==1.0.1
-WTForms==2.3.1
-Flask-SocketIO==3.3.2
-gevent==1.4.0
-gevent-websocket==0.10.1
-greenlet==0.4.15
-gunicorn==19.9.0
-passlib==1.7.1
-psycopg2==2.7.7
-python-engineio==3.5.1
-python-socketio==3.1.2
+wrapt==1.12.1
+
